tests/ucc/bind/good/fun-with-args-2.c
int fun(int a)
{
    return a;
}

int fun2(int a)
{
    return a;
}
