tests/ucc/bind/bad/redef-same-scope-1.c
int fun(int a)
{
    int a;

    return a;
}
